[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "classes"
version = "0.3.0"
description = "Smart, pythonic, ad-hoc, typed polymorphism for Python"
license = "BSD-2-Clause"

authors = [
  "sobolevn <mail@sobolevn.me>"
]

readme = "README.md"

repository = "https://github.com/dry-python/classes"
homepage = "https://classes.readthedocs.io"

keywords = [
  "functional programming",
  "fp",
  "type class",
  "typeclass",
  "typeclasses",
  "ad-hoc",
  "composition",
  "type-safety",
  "mypy",
  "stubs"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.7"
typing_extensions = "^3.10"

[tool.poetry.dev-dependencies]
mypy = "^0.910"

wemake-python-styleguide = "^0.15"
flake8-pytest-style = "^1.5"
nitpick = "^0.26"

safety = "^1.10"

pytest = "^6.2"
pytest-cov = "^2.12"
pytest-randomly = "^3.8"
pytest-mypy-plugins = "^1.7"

sphinx = "^4.1"
sphinx-autodoc-typehints = "^1.12"
sphinxcontrib-mermaid = "^0.7"
sphinx-typlog-theme = "^0.8"
doc8 = "^0.9"
m2r2 = "^0.3"
tomlkit = "^0.7"
codespell = "^2.1"

phantom-types = "^0.10"
