[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "classes"
version = "0.4.1"
description = "Smart, pythonic, ad-hoc, typed polymorphism for Python"
license = "BSD-2-Clause"

authors = [
  "sobolevn <mail@sobolevn.me>"
]

readme = "README.md"

repository = "https://github.com/dry-python/classes"
homepage = "https://classes.readthedocs.io"

keywords = [
  "functional programming",
  "fp",
  "type class",
  "typeclass",
  "typeclasses",
  "ad-hoc",
  "composition",
  "type-safety",
  "mypy",
  "stubs"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.7"
typing_extensions = ">=3.10,<5.0"

[tool.poetry.dev-dependencies]
mypy = "^0.942"

wemake-python-styleguide = "^0.17"
flake8-pytest-style = "^1.6"
nitpick = "^0.32"

safety = "^2.3"

pytest = "^7.1"
pytest-cov = "^4.0"
pytest-randomly = "^3.12"
pytest-mypy-plugins = "^1.9"

sphinx = "^5.2"
sphinx-autodoc-typehints = "^1.20"
sphinxcontrib-mermaid = "^0.7"
sphinx-typlog-theme = "^0.8"
doc8 = "^1.0"
m2r2 = "^0.3"
tomlkit = "^0.11"
codespell = "^2.2"

phantom-types = "^1.0"
