[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/0.19.2/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "classes"
version = "0.4.1"
description = "Smart, pythonic, ad-hoc, typed polymorphism for Python"
license = "BSD-2-Clause"

authors = [
  "sobolevn <mail@sobolevn.me>"
]

readme = "README.md"

repository = "https://github.com/dry-python/classes"
homepage = "https://classes.readthedocs.io"

keywords = [
  "functional programming",
  "fp",
  "type class",
  "typeclass",
  "typeclasses",
  "ad-hoc",
  "composition",
  "type-safety",
  "mypy",
  "stubs"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.10"
typing_extensions = ">=3.10,<5.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.942"

wemake-python-styleguide = "^0.19"
flake8-pytest-style = "^2.0"
nitpick = "^0.35"

safety = "^3.2"

pytest = "^8.3"
pytest-cov = "^6.0"
pytest-randomly = "^3.16"
pytest-mypy-plugins = "^1.9"

sphinx = "^8.1"
sphinx-autodoc-typehints = "^2.5"
sphinxcontrib-mermaid = "^1.0"
sphinx-typlog-theme = "^0.8"
doc8 = "^1.1"
m2r2 = "^0.3"
tomlkit = "^0.13"
codespell = "^2.3"

phantom-types = "^3.0"
